# stork

./: CMakeLists.txt
source/interpreter/: CMakeLists.txt  main.cpp
source/libstork/: CMakeLists.txt
